# project_src = files([
#     'main.cc',
#     'merge_sort_mt.cc'
# ])

# executable(
#     'project',
#     include_directories: src,
#     sources: project_src,
#     dependencies: [],
#     install: true
# )

# executable(
#     'line_enum',
#     include_directories: src,
#     sources: files(['line_enum.cc',
#                     'line_number_buffer.cc']),
#     dependencies: []
    
# )

subdir('vector')
subdir('message')
subdir('array2d')
subdir('line_number_buffer')
subdir('merge_sort')
subdir('merge_sort_mt')
subdir('ostream_guard')
subdir('ostream_iterator')
subdir('user_manager')