gtest = dependency('gtest', main: true)
test(
    'vector',
    executable(
        'vector_test',
        sources: ['vector_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'message',
    executable(
        'message_test',
        sources: ['message_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'array2d',
    executable(
        'array2d_test',
        sources: ['array2d_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'ostream_iterator',
    executable(
        'ostream_iterator',
        sources: ['ostream_iterator_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)

test(
    'merge_sort',
    executable(
        'merge_sort',
        sources: ['merge_sort_test.cc'],
        include_directories: src,
        dependencies: [gtest]
    )
)